fixed ul gap error

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ ul {
   list-style: none;
   margin-left: 0;
   margin-right: 20px;
-  gap: 40px;px ;
+  gap: 40px;
 }
 
 a {
